<resources>
    <string name="app_name" translatable="false">YaRadio 2</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="like_track">Like</string>
    <string name="dislike_track">Dislike</string>
    <string name="nastroenie">Mood</string>
    <string name="discover">Discover</string>
    <string name="language">Language</string>
    <string name="update">Update</string>
    <string name="loading">Loading…</string>
    <string name="like">Like</string>
    <string name="dislike">Dislike</string>
    <string name="p_r" translatable="false">P/R</string>
    <string name="no_internet">No internet</string>
    <string name="traffic_save">Traffic economy</string>
    <string name="_0_no_economy_192_bitrate">0 - no economy (192 bitrate aac)</string>
    <string name="_1_medium_economy_128_bitrate">1 - medium economy (128 bitrate aac)</string>
    <string name="_2_high_economy_64_bitrate">2 - high economy (64 bitrate aac)</string>
    <string name="recommendations">Recommendations</string>
    <string name="personal">Personal</string>
    <string name="genre">Genre</string>
    <string name="mood">Mood</string>
    <string name="activity">Activity</string>
    <string name="epoche">Epoche</string>
    <string name="authors">Authors</string>
    <string name="guest">Guest</string>
    <string name="log_in">Log In</string>
    <string name="copied">Copied!</string>
    <string name="_0_no_economy_192_bitrate_mp3">0 - no economy (192 bitrate mp3)</string>
    <string name="track_info">Track info</string>
    <string name="download_track">Download track?</string>
    <string name="download_title">Download?</string>
    <string name="error">Error</string>
    <string name="already_yet">Already yet</string>
    <string name="permission_denied">Permission denied</string>
    <string name="updated">Updated</string>
    <string name="always_fresh_apk">Fresh version</string>
</resources>
