<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/type_users"
            android:title="@string/personal" />
        <item
            android:id="@+id/type_genres"
            android:title="@string/genre" />
        <item
            android:id="@+id/type_moods"
            android:title="@string/mood" />
        <item
            android:id="@+id/type_activities"
            android:title="@string/activity" />
        <item
            android:id="@+id/type_epoches"
            android:title="@string/epoche" />
        <item
            android:id="@+id/type_authors"
            android:title="@string/authors" />
        <item
            android:id="@+id/type_recommendations"
            android:title="@string/recommendations" />
    </group>
</menu>
