<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/cover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:paddingBottom="20dp"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:src="@drawable/user_icon" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/loading" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF"
            app:srcCompat="@drawable/settings_dark"
            android:layout_gravity="right|center"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingEnd="30dp"
        android:paddingStart="30dp"
        android:background="@android:color/background_dark">

        <ImageButton
            android:id="@+id/pause"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_pause"
            android:text="@string/p_r" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/skip"
            android:text="@string/next" />

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#00FFFFFF" />

        <ImageButton
            android:id="@+id/dislikeButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/dislike"
            android:text="@string/dislike" />

        <ImageButton
            android:id="@+id/likeButton"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_weight="3"
            android:background="#00FFFFFF"
            android:scaleType="fitCenter"
            android:src="@drawable/icon_like"
            android:text="@string/like" />

    </LinearLayout>
</LinearLayout>
