<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" tools:context=".SubtypeSetting">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        android:id="@+id/toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nastroenie" />

                <RadioGroup
                    android:id="@+id/mood"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <!--<RadioButton android:id="@+id/mood_any" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="any" />
                    <RadioButton android:id="@+id/mood_sad" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="sad" />
                    <RadioButton android:id="@+id/mood_calm" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="calm" />
                    <RadioButton android:id="@+id/mood_active" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="active" />
                    <RadioButton android:id="@+id/mood_fun" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="fun" />-->
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/discover" />

                <RadioGroup
                    android:id="@+id/discover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <!--<RadioButton android:id="@+id/discover_default" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="default" />
                    <RadioButton android:id="@+id/discover_popular" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="popular" />
                    <RadioButton android:id="@+id/discover_discover" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="discover" />
                    <RadioButton android:id="@+id/discover_favorite" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="favorite" />-->
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/language" />

                <RadioGroup
                    android:id="@+id/language"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <!--<RadioButton android:id="@+id/language_any" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="any" />
                    <RadioButton android:id="@+id/language_not-russian" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="not-russian" />
                    <RadioButton android:id="@+id/language_russian" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="russian" />-->
                </RadioGroup>
            </LinearLayout>

            <Button
                android:id="@+id/update_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>